--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="enable_sleep_check">Reopens last running app after Firestick wakes from Sleep</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+    <string name="about">About</string>
+    <string name="aboutDev">"A small Android application to circumvent the default Amazon Fire launcher.
+Works for Fire Tablets and Fire TV's.
+Huge thanks to ParrotGeek1, BaronKiko, Speeddymon, wilkovatch and Urbanman2004.
+"</string>
 </resources>
